# SkirtExperiment

./: CMakeLists.txt  README.md  data.h  dynamic_bone.cpp  dynamic_bone.h  dynamic_bone_collider.cpp  dynamic_bone_collider.h  glm2bt.hpp  main.cpp  main.cpp.bak  math_util.cpp  math_util.h  print_helper.h  skeleton.h  skirt_experiment.cpp  skirt_experiment.h
data/: leftupleg  rightupleg  skirt1  skirt2  skirt3  skirt4  skirt5  skirt6  tmp
